# b2b_shop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: .env.sample  settings.py  urls.py
shop/: urls.py
shop/admin/: __init__.py  charge.py  transaction.py  user_credit.py
shop/exceptions/: __init__.py  balance_insufficient.py
shop/helpers/: __init__.py  make_transaction.py
shop/migrations/: 0001_initial.py  0002_charge.py  0003_transaction.py  0004_charge_is_active.py  0005_alter_transaction_amount_alter_usercredit_credit.py
shop/models/: __init__.py  charge.py  transaction.py  user_credit.py
shop/serializers/: __init__.py  charge.py  user.py  user_credit.py
shop/tests/: test_charge.py  test_purchase_race_condition.py  test_purchase_response_time.py  test_user_credit.py
shop/views/: __init__.py  charge.py  user_credit.py
